# bookstore

./: .dockerignore  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
api/: apps.py
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: tests.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: admin.py  tests.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: product.py
product/serializers/: product_serializer.py
product/viewsets/: product_viewset.py
